tests/codegen/fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.rs:4:1
  |
4 | struct Scalar(i32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^
